Bug 350612 - Custom folder icons aren't displayed.
Summary: Custom folder icons aren't displayed.
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 346317 350761 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-25 13:37 UTC by perrantrevan
Modified: 2015-09-25 12:43 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14
Sentry Crash Report:


Attachments
Patch: show custom folder icons again (3.49 KB, patch)
2015-08-09 21:21 UTC, Emmanuel Pescosta
Details

Note You need to log in before you can comment on or make changes to this bug.
Description perrantrevan 2015-07-25 13:37:21 UTC
Version 14.12.95 Archlinux AUR git package

I changed the Downloads folders etc in my Home folder to custom icons which reflect their contents. However, since upgrading to Dolphin using Qt5, these custom icons don't show and setting them again using the properties dialogue doesn't work.

In the latest Gwenview, however, the correct icons are displayed using it's browsing mode.



Reproducible: Always
Comment 1 Christoph Feck 2015-07-30 16:27:44 UTC
*** Bug 350761 has been marked as a duplicate of this bug. ***
Comment 2 Emmanuel Pescosta 2015-07-31 16:53:18 UTC
Thanks for the bug report!
I can reproduce it, I will have a look at it.
Comment 3 Emmanuel Pescosta 2015-07-31 17:23:59 UTC
Also reproducible in the open/save file dialog.
I'll reassign it to KIO.
Comment 4 Emmanuel Pescosta 2015-08-09 21:21:13 UTC
Created attachment 93965 [details]
Patch: show custom folder icons again

I have found some time to have a look at it again, this problem was introduced by commit 46cd152f.

I will upload my patch to review board tomorrow.
Comment 5 Wolfgang Bauer 2015-08-10 18:50:06 UTC
*** Bug 346317 has been marked as a duplicate of this bug. ***
Comment 6 Emmanuel Pescosta 2015-08-11 18:18:06 UTC
Git commit d8aafbc37daab3cd62ee77430a55b3d72ccc12e0 by Emmanuel Pescosta.
Committed on 11/08/2015 at 18:13.
Pushed by emmanuelp into branch 'master'.

Show custom folder icons again

Set mimetype as known when we assign the mime type for inode/directory

This bug was introduced by commit 46cd152f
FIXED-IN: 5.14
REVIEW: 124690

M  +21   -0    autotests/kfileitemtest.cpp
M  +1    -0    autotests/kfileitemtest.h
M  +8    -8    src/core/kfileitem.cpp

http://commits.kde.org/kio/d8aafbc37daab3cd62ee77430a55b3d72ccc12e0
Comment 7 perrantrevan 2015-08-11 20:09:35 UTC
Thanks a lot!