Show custom folder icons again

Set mimetype as known when we assign the mime type for inode/directory

This bug was introduced by commit 46cd152f

BUG: 350612
FIXED-IN: 5.14
REVIEW: 124690